# osoji

./: .env.example  .gitattributes  .gitignore  .osoji.local.toml.example  .osoji.toml  .osojiignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_READINESS.md  LICENSE  README.md  SECURITY.md  SUPPLY-CHAIN-SECURITY.md  pyproject.toml  requirements-tools.in
.claude/: settings.local.json
.claude/commands/: security-incident.md  security-scan.md
.claude/skills/osoji-sweep/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml  pipeline_improvement.yml
.github/workflows/: ci.yml  claude.yml  codeql.yml  pr-review.yml  publish.yml  scorecard.yml  security-scan.yml
docs/: bug-analysis-stale-string-contract.md
docs/explanatory/: dead-code-detection.md  dead-plumbing-detection.md  facts-database-and-import-graphs.md  junk-code-detection-framework.md  language-plugin-system.md  llm-provider-abstraction.md  llm-tool-schemas-and-validation.md  rate-limiting-and-token-budgeting.md  shadow-documentation-architecture.md  string-contract-obligations.md
docs/how-to/: safety-checks.md
docs/superpowers/specs/: 2026-04-11-provider-selection-init-design.md
docs/tutorials/: generating-shadow-documentation.md  getting-started-cli.md  protecting-repo-with-safety-checks.md  running-documentation-audit.md  using-doc-prompts.md
scripts/: ab_v159_significance_grade.py  ab_v15e_debris_rubric.py  corpus_replay.py  eval_lib.py  measure_debris_cutover.py  migrate_bootstrap_corpus.py  mine_traces.py  triage_bootstrap.py
src/docstar/: __init__.py  audit.py  cli.py  config.py  deadcode.py  debris.py  diff.py  doc_analysis.py  facts.py  hasher.py  hooks.py  junk.py  junk_cicd.py  junk_deps.py  junk_orphan.py  llm.py  obligations.py  plumbing.py  rate_limiter.py  scorecard.py  shadow.py  stats.py  symbols.py  tools.py  viz.html  viz.py  walker.py
src/docstar/llm/: __init__.py  anthropic.py  base.py  factory.py  tokens.py  types.py
src/docstar/safety/: __init__.py  checker.py  filters.py  models.py  paths.py  secrets.py
src/osoji/: __init__.py  async_utils.py  audit.py  audit_manifest.py  claim_builder.py  cli.py  closure.py  config.py  corpus_emit.py  deadcode.py  deadparam.py  diff.py  doc_analysis.py  doc_prompts.py  evidence.py  evidence_builders.py  facts.py  findings.py  findings_adapter.py  hasher.py  hooks.py  init.py  junk.py  junk_cicd.py  junk_deps.py  junk_orphan.py  junk_triage.py  obligations.py  observatory.py  osoji-observatory.schema.json  plumbing.py  push.py  rate_limiter.py  scorecard.py  shadow.py  stats.py  symbols.py  tools.py  triage.py  triage_exec.py  (+2 more)
src/osoji/llm/: __init__.py  _provider_base.py  anthropic.py  base.py  budgets.py  claude_code.py  errors.py  factory.py  google.py  litellm_provider.py  logging.py  openai.py  openrouter.py  rate_limited.py  registry.py  runtime.py  tokens.py  types.py  validate.py
src/osoji/plugins/: __init__.py  _legacy_python_ast.py  base.py  python_plugin.py  registry.py  (+3 more)
tests/: __init__.py  conftest.py  stat_utils.py  test_audit.py  test_audit_billing_fail_fast.py  test_audit_debris_cutover.py  test_audit_degradation.py  test_audit_incremental.py  test_audit_manifest.py  test_audit_obligations_cutover.py  test_claim_builder.py  test_claude_code_provider.py  test_cli_entry.py  test_cli_llm.py  test_cli_output_encoding.py  test_closure.py  test_config_audit_exclude.py  test_corpus_emit.py  test_corpus_replay.py  test_corpus_structure.py  test_deadcode.py  test_deadcode_ast.py  test_deadparam.py  test_diff_json.py  test_doc_analysis_cutover.py  test_doc_prompts.py  test_doc_refs.py  test_eval_lib.py  test_evidence_builders.py  test_extract_js_integration.py  test_facts.py  test_findings.py  test_findings_adapter.py  test_hasher.py  test_ignore_patterns.py  test_impl_hash.py  test_init.py  test_junk.py  test_junk_cicd.py  test_junk_deps.py  (+36 more)
tests/goldens/: python_facts.json
tests/safety/: __init__.py  test_checker.py  test_cli.py  test_filters.py  test_paths.py
wiki/: SCHEMA.md  index.md  log.md
wiki/concepts/: self-sufficient-claims.md  string-contract-taxonomy.md  three-gap-theory.md
wiki/decisions/: 0002-language-choice.md  0003-plugin-packaging.md
wiki/specs/: 0001-v1-foundation.md  0002-wiki-bootstrap.md
(+2421 files in other folders)
