[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osojicode"
version = "0.1.0"
description = "Shadow documentation engine - generates semantically dense summaries of codebases for AI agent consumption"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Osoji Authors" }
]
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "litellm>=1.63.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
safety = ["detect-secrets>=1.4.0"]
all = ["detect-secrets>=1.4.0"]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "pytest-asyncio>=0.21.0", "scipy>=1.11.0"]

[project.scripts]
osoji = "osoji.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "prompt_regression: tests that make real LLM API calls to verify prompt behavior",
    "live_smoke: optional live provider smoke tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osoji"]

[project.urls]
Homepage = "https://github.com/osojicode/osoji"
Repository = "https://github.com/osojicode/osoji"
Issues = "https://github.com/osojicode/osoji/issues"
